# traffic-prediction

./: .dockerignore  .env.example  COMPLETION_SUMMARY.txt  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.py  Dockerfile  FIXES_APPLIED.md  LOCATION_FIX_QUICKSTART.md  LOCATION_FIX_SUMMARY.md  LOCATION_PREDICTION_FIX_CHANGES.txt  LOCATION_PREDICTION_FIX_REPORT.md  MULTI_CITY_FIX.md  Procfile  README.md  RESOLUTION_SUMMARY.md  SYSTEM_STATUS.md  SYSTEM_STATUS.py  VERIFICATION_REPORT.txt  analyze_multi_city.py  analyze_response.py  app.py  check_html.py  check_response.py  create_local_scaler.py  create_location_features.py  create_location_zones.py  create_multi_city_scalers.py  debug_api.py  deploy.sh  deployment_check.py  diagnose_location_issue.py  direct_model_test.py  docker-compose.yml  enhance_and_retrain.py  extract_predictions.py  final_verification.py  find_hyderabad_sensors.py  finetune_location.py  finetune_location_encoder.py  full_test.py  (+41 more)
saved_models/: city_centers.pkl  city_scalers.pkl  location_info.pkl  location_norm_params.pkl  location_zones.pkl  scaler.pkl  sensor_ids.pkl  st_mlp.pth  static_scaler.pkl  static_scaler_hyderabad_local.pkl
templates/: prediction.html
