[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-flow-prediction"
version = "1.0.0"
description = "Traffic Flow Prediction System using Spatial-Temporal MLP"
authors = [{name = "Traffic Prediction Team"}]
requires-python = ">=3.10,<3.11"
dependencies = [
    "Flask==2.3.0",
    "Werkzeug==2.3.0",
    "torch==2.1.2",
    "numpy==1.25.2",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.1",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
